--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://pacorta.github.io/ortabazan/assets/css/style.css">
 
   <!--
     - google font link
