changed path of css file, fixing error in testimonials section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="https://pacorta.github.io/ortabazan/assets/css/style.css">
+   <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--
     - google font link
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script type="text/javascript">
   (function () {
-    emailjs.init("i_TbTgfVJisbrTMfM"); // Initialize with your public key
+    emailjs.init("i_TbTgfVJisbrTMfM");
   })();
 </script>
 
@@ -198,11 +198,11 @@
           <h2 class="h2 article-title">About me</h2>
         </header>
 
-        <section class="about-text">
+        <div section class="about-text">
           <p>
             I’m a Computer Science major at UTRGV, focusing on software engineering, algorithms, and cross-platform development. My experience spans app development, backend integration, and robotics, equipping me to tackle real-world challenges creatively and effectively. I thrive in collaborative environments, leveraging teamwork and communication to bridge technical and non-technical gaps. Whether working with tools like Flutter, Firebase, or OpenCV, I’m always eager to adapt to new challenges, grow as a developer, and contribute to impactful solutions.
           </p>
-        </section>
+        </div section>
 
 
         <!--
@@ -376,10 +376,12 @@
               </div>
             </li>
 
+          -->
+
           </ul>
 
         </section>
-      -->
+      
 
         <!--
           - testimonials modal
