Added Tristan Hernandez as testiomnial

--- a/index.html
+++ b/index.html
@@ -302,6 +302,24 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/tristan.png" alt="Tristan Hernandez" width="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Tristan Hernandez, SWE</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <p>
+                    When I think or am asked of Francisco, I think of him as driven. Although we have not known each other for a long time, in the short time of collaborating with one another, I’ve come to see him as someone who is reliable and always eager to learn. His initiative reflects in his willingness to take on difficult challenges both technical in his profession as a software developer, and non-technical as a 2x officer for IEEE-STBS. I am honored to have met Paco, and any company would be lucky to have someone like him on their team
+                  </p>
+                </div>
+
+              </div>
+            </li>
+
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
                   <img src="./assets/images/esteban.jpeg" alt="Esteban Zavala" width="60" data-testimonials-avatar>
                 </figure>
 
